# meta-ads-mcp

./: .gitignore  .uv.toml  Dockerfile  META_API_NOTES.md  README.md  debug_meta_api_tool.py  debug_token_flow.py  future_improvements.md  login.bat  login.sh  meta-ads-mcp  meta_ads.py  meta_ads_auth.sh  meta_ads_generated.py  meta_auth_test.sh  pyproject.toml  requirements.txt  setup.py  smithery.yaml  test_meta_ads_auth.py  test_pipeboard_auth.py
meta_ads_mcp/: __init__.py  __main__.py  api.py
meta_ads_mcp/core/: __init__.py  accounts.py  ads.py  ads_library.py  adsets.py  api.py  auth.py  authentication.py  callback_server.py  campaigns.py  insights.py  pipeboard_auth.py  resources.py  server.py  utils.py
